--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -93,7 +93,7 @@
     }
   
     .nav-menu.active {
-      background: #1c2237;
+      background: #c61700;
       left: 0;
       opacity: 1;
       transition: all 0.6s ease;
@@ -108,7 +108,7 @@
     }
   
     .nav-links:hover {
-      color: #f00946;
+      color: #242424;
       transform: scale(1.2);
       transition: all 0.3s ease;
     }
