--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,5 +1,5 @@
 .home__hero-section {
-    color: #fff;
+    color: #1c2237;
     padding: 160px 0;
   }
   
@@ -46,7 +46,7 @@
     font-size: 48px;
     line-height: 1.1;
     font-weight: 600;
-    color: #f7f8fa;
+    color: #1c2237;
   }
   
   .dark {
@@ -54,7 +54,7 @@
   }
   
   .darkBg {
-    background-color: #1c2237;
+    background-color: #fffceb;
   }
   
   .home__hero-subtitle {
@@ -72,7 +72,7 @@
     max-width: 95%;
     margin-top: 0;
     margin-right: 0;
-    margin-left: 10px;
+    margin-left: 0;
     padding-right: 0;
   }
   
