--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -55,7 +55,7 @@
   }
   
   .nav-item:hover {
-    border-bottom: 2px solid #f00946;
+    border-bottom: 2px solid #000000;
   }
   
   .nav-links {
